sorellaFront/src/app/view/tab2/components/product-detail/product-detail.component.scss
.go-back-icon{
    position: absolute;
    top: 1rem;
    left: 1rem;
    font-size: 2rem;
    color: #a3951f;
    cursor: pointer;
    z-index: 1;
}

.go-back-icon:hover{
    color: #ffffff;
}

.product-images{
    margin-top: 8.5rem;
    width: 100%;
    height: 60%;
}

.product-images__selected-image{
    width: 100%;
    height: 55%;
    object-fit: cover;
}

.product-images__grid{
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    margin-top: 1.5rem;
    gap: 1rem;
}

.product-images__grid__image{
    object-fit: cover;
    aspect-ratio: 1/1.2;
    border-radius: 10%;
    flex-grow: 1; /* Distribute available space equally among items */
    max-width: calc(33.333% - 1rem); /* Adjust the max-width as needed for your layout */
}

/* Add a new class to change the style when a product-images__grid__image is selected applying BEM notation  to name the class*/
.product-images__grid__image--selected{
    border: 2px solid #a3951f;
}

.product-info p {
    color: black;
    margin: 0;
}

.product-info{
    width: 85%;
    min-height: 7rem;
    aspect-ratio: 2/1.1;
    margin: 0 auto 0.5rem auto;
    background-color: #ffffff;
    border-radius:2rem;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content:  space-evenly;
}

.product-info__title{
    font-size: 1.2rem;
    font-weight: 600;
    margin: 0.5rem 0rem 0.5rem 0rem;
}

.product-info__description{
    text-align:justify ;
    font-size: 1rem;
    font-weight: 400;
    margin: 0.5rem;
}

.product-info__add-to-cart{
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-evenly;
}

.product-info__add-to-cart__price{
    font-size: 1.2rem;
    font-weight: 600;
    margin: 0.5rem 0rem 0.5rem 0rem;
}

.product-info__add-to-cart__button {
    font-size: 1.2rem;
    background-color: #a3951f;
    padding: .5rem 1.5rem;
    border-radius: 2rem;

}

